hw12_13_14_15_calendar/k8s/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: scheduler-app:latest
          imagePullPolicy: IfNotPresent
          readinessProbe:
            exec:
              command: ["sh", "-c", "nc -z postgres-service 5432"]
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["sh", "-c", "nc -z postgres-service 5432"]
            initialDelaySeconds: 30
            periodSeconds: 10
