hw12_13_14_15_calendar/k8s/sender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sender-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sender
  template:
    metadata:
      labels:
        app: sender
    spec:
      containers:
        - name: sender
          image: sender-app:latest
          imagePullPolicy: IfNotPresent
