hw12_13_14_15_calendar/k8s/calendar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
spec:
  type: ClusterIP
  selector:
    app: calendar
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
