hw12_13_14_15_calendar/k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: rabbitmq
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: rabbitmq-management
  type: NodePort # Позволяет доступ снаружи кластера
