hw12_13_14_15_calendar/k8s/calendar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - host: "calendar.local" #grpc-app.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: calendar-service
                port:
                  number: 50051
